# crypto-trade-engine

./: .gitignore  Dockerfile  pyproject.toml
.context/: CLAUDE.md
src/: backtest_main.py  engine_main.py  healthcheck.py
src/application/: __init__.py  backtest_runner.py  events.py  orchestrator.py  order_executor.py  risk_manager.py  strategy_runner.py
src/domain/: __init__.py  backtest_result.py  enums.py  exceptions.py  interfaces.py  models.py  position_manager.py
src/infrastructure/: ccxt_exchange_adapter.py  ccxt_historical.py  ccxt_market_data.py  command_listener.py  csv_market_data.py  db.py  db_models.py  db_repositories.py  in_memory_event_bus.py  logging.py  metrics.py  redis_event_bus.py  settings.py  simulated_exchange.py  state_manager.py
src/ml/: __init__.py  features.py  train.py
src/strategies/: __init__.py  adaptive_rsi.py  bollinger_bands.py  bollinger_rsi.py  dca.py  macd_cross.py  ml_rsi.py  rsi_threshold.py  sma_cross.py  spot_grid.py
tests/: test_adaptive_rsi.py  test_bollinger_bands.py  test_bollinger_rsi.py  test_dca_strategy.py  test_macd_cross.py  test_rsi_threshold.py  test_sma_cross.py  test_spot_grid_strategy.py
tests/application/: test_backtest_runner.py  test_orchestrator.py  test_order_executor.py  test_risk_manager.py  test_strategy_runner.py
tests/domain/: test_models.py  test_position_manager.py
tests/infrastructure/: test_ccxt_exchange_adapter.py  test_ccxt_market_data.py  test_command_listener.py  test_csv_market_data.py  test_db_repositories.py  test_metrics.py  test_redis_event_bus.py  test_simulated_exchange.py  test_state_manager.py
tests/integration/: test_events_contract.py
