[project]
name = "trade-engine-crypto"
version = "0.1.0"
description = "Async crypto algorithmic trading engine (Clean Architecture)"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.3",
    "redis>=5.0",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "cryptography>=42",
    "prometheus-client>=0.22",
    "tenacity>=9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "fakeredis>=2.23",
]
backtest = [
    "pyarrow>=15",
    "pandas>=2.2",
    "tqdm>=4.66",
]
ml = [
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "joblib>=1.4",
]

[project.scripts]
trade-engine = "engine_main:main"
trade-engine-backtest = "backtest_main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["engine_main", "backtest_main", "healthcheck"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["ccxt", "ccxt.*", "fakeredis", "fakeredis.*"]
ignore_missing_imports = true
